# pico-freeRTOS-template-project

./: .gitignore  README.md  notes.md  pico-rtos.code-workspace
Applications/: .gitignore  CMakeLists.txt
Applications/Source/: CMakeLists.txt  file.h  general_utils.h  main.c  main.h  main_test.c  rahels_types.h
